# DeepTalk

./: .readthedocs.yaml  DeepTalk-singleST.ipynb  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
DeepTalk_ST/: __init__.py  ccc_predict.py  cci_vis.py  decon_utils.py  map_utils.py  plot_utils.py  test.py  utils.py
DeepTalk_ST/models/: __init__.py  decon.py  match.py
DeepTalk_ST/src/: __init__.py  finetuning.py  pretraining.py
DeepTalk_ST/src/CompGCN/: __init__.py  data_loader.py  requirements.txt  run.py
DeepTalk_ST/src/ccc_model/: __init__.py  ccc_model.py  process_walks_gcn.py
DeepTalk_ST/src/encoding/: __init__.py  gcn_graph_encoder.py  gcn_transform.py  input_encoder.py
DeepTalk_ST/src/processing/: __init__.py  attributed_graph.py  generic_attributed_graph.py
DeepTalk_ST/src/utils/: __init__.py  context_metrics.py  data_utils.py  evaluation.py  link_predict.py
docs/: conf.py  index.rst  installation.md  installation.rst  requirements.txt  tutorial_link  tutorial_sp_link  tutorials.rst
docs/api/: index.rst
docs/notebooks/: DeepTalk-singleST.ipynb  VISP_MER_test.ipynb
test/: lrpairs_new.csv  pathways.rar
test/Plot/Deeptalk_plot/: deeptalk_plot.ipynb  readme.md  st_meta.pkl
test/Plot/NICHES_plot/: NICHES_Neighborcell_pair.pkl  NICHES_Neighbormetadata.pkl  NICHES_metadata.pkl  NICHES_plot.ipynb
test/UMAP/: deeptalk_umap.ipynb
test/single-cell/: MERFISH_genes.csv  Sst_Sstr2.model  process.R  single_cell_process.R  st_flie.txt  st_location.txt
test/spot/: Mif_Epha5.model  prepro.R  process.R
(+13 files in other folders)
