[metadata]
name = DeepTalk_ST
version = 0.0.12
description = Cell-cell communication prediction for ST data.
long_description_content_type = text/markdown
long_description = file: README.md
keywords = cell-cell communicaiton, spatial transcriptomics, deep learning
license = MIT License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    scanpy>=1.9.6 
    anndata>=0.9.2 
    numpy>=1.22.4 
    scipy>=1.10.1 
    pandas>=2.0.3 
    scikit-learn>=1.3.2 
    statsmodels>=0.14.0 
    igraph>=0.10.8 
    pynndescent>=0.5.10
    squidpy>=1.2.3
python_requires = >=3.8